<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Listen</string>

    <string name="list_view_label">Inbox</string>
    <string name="list_view_label_with_info">Inbox (%1$d/%2$d)</string>
    <string name="received_on_label">Received: %1$s (%2$s)</string>
	
	<string name="voicemailListEmpty">You do not have any voicemail</string>
	<string name="leftByUnknown">Unavailable</string>
	<string name="transcriptionUnknown">Transcript not available</string>
	<string name="dateCreatedUnknown"></string>
	<string name="voicemail_not_found">Voicemail not found</string>

    <string name="menu_refresh">Refresh</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_delete">Delete</string>
	<string name="menu_inbox">Inbox</string>
	<string name="menu_mark_read">Mark read</string>
	<string name="menu_mark_unread">Mark unread</string>
	<string name="menu_view">View</string>
	<string name="menu_call">Call</string>
	<string name="menu_forward">Forward</string>
	<string name="menu_sms">Text</string>
	<string name="menu_email">Email</string>
		
	<string name="share_voicemail">Share Voicemail</string>
	
	<string name="dialog_delete_title">Delete Voicemail</string>
	<string name="dialog_delete_summary">Delete this voicemail from your account?</string>
	<string name="dialog_delete_confirm">Delete</string>
	<string name="dialog_delete_cancel">Cancel</string>
	
	<string name="pref_sync_category">Sync Settings</string>
	<string name="pref_sync_clear_title">Clear Cache</string>
	<string name="pref_sync_clear_detail">Remove Listen data from the local cache</string>
	<string name="pref_sync_interval_title">Poll Interval</string>
	<string name="pref_sync_interval_detail_ns">%1$d minute</string>
	<string name="pref_sync_interval_detail_ws">%1$d minutes</string>
	<string name="pref_sync_c2dm_enabled">Automatic sync enabled</string>
	
	<string name="pref_sync_audio">Sync Audio</string>
	<string name="pref_sync_audio_on">Audio downloaded automatically</string>	
	<string name="pref_sync_audio_off">Audio downloaded on demand</string>
	<string name="pref_sync_to_external_title">External Storage</string>
	<string name="pref_sync_to_external_summary">Save audio on external storage</string>
	
	<string name="pref_notif_category">Notifications</string>
	<string name="pref_notif_inbox_title">Inbox Notifications</string>
	<string name="pref_notif_inbox_summary_on">Notify in status bar when new items arrive</string>
	<string name="pref_notif_inbox_summary_off">Notify in status bar when new items arrive</string>
	<string name="pref_notif_ringtone">Select Ringtone</string>
	<string name="pref_notif_vibrate_title">Vibrate</string>
	<string name="pref_notif_vibrate_summary">Vibrate when new items arrive</string>
	<string name="pref_notif_light_title">Light</string>
	<string name="pref_notif_light_summary">Blink status light when new items arrive</string>
	
	<string name="pref_dial_category">Dialing</string>
	<string name="pref_dial_prefix_title">Office Number</string>
	<string name="pref_dial_prefix_dialog_detail">Number to prefix to extensions</string>	
	<string name="pref_dial_prefix_summary">Prefix to office extensions</string>

	<string name="pref_accounts_settings_title">Account &#x26; Sync Settings</string>
	<string name="pref_accounts_settings_summary">Android account and sync settings</string>
	<string name="pref_accounts_reset_password_title">Set Password</string>
	<string name="pref_accounts_reset_password_summary">Change the Listen password stored on the phone</string>

	<string name="dialog_clear_cache_title">Clear Listen Data</string>
	<string name="dialog_clear_cache_details">Removes the Listen voicemails and contacts stored on this device and then synchronizes with the Listen server. Previously hidden Listen contacts will be viewable again.</string>
	<string name="dialog_clear_cache_confirm">Clear</string>
	<string name="dialog_clear_cache_cancel">Cancel</string>
	<string name="clearing_cache_progress">Clearing cache\u2026</string>

	<string name="office_prefix_progress">Updating contacts\u2026</string>
	
	<string name="remove_account_progress">Removing account</string>
	
	<string name="dialog_sync_interval_title">Listen Poll Interval</string>
	<string name="dialog_sync_interval_details">Set the minutes between checking for new voicemails.</string>
	<string name="dialog_sync_interval_confirm">Set</string>
	<string name="dialog_sync_interval_cancel">Cancel</string>

    <string name="authLabel">Listen</string>
    <string name="syncVoicemailLabel">Voicemail</string>
    <string name="syncContactsLabel">Contacts</string>
    
    <string name="ui_authenticate_title">Sign-in</string>
    <string name="ui_authenticating">Authenticating\u2026</string>
    <string name="login_activity_username_label">Username</string>
    <string name="login_activity_password_label">Password</string>
    <string name="login_activity_host_label">Host</string>
    <string name="login_activity_ok_button">Sign in</string>
    
    <string name="login_activity_newaccount_text">Sign in to your Listen account. </string>
    <string name="login_activity_loginfail_text_all">The username, password, or host isn\'t valid. A Listen account is required. Please try again.</string>
    <string name="login_activity_loginfail_text_pwmissing">Type the password for this account.</string>
    <string name="login_activity_loginfail_text_host">The host provided isn\'t valid.</string>
    <string name="login_activity_loginfail_text_password">You entered the wrong password or your account has changed. Please re-enter your password.</string>
    <string name="login_activity_loginfail_text_network">The provided Listen server is currently unavailable.</string>

    <string name="sign_in_button_label">Sign in</string>
    <string name="back_button_label">Back</string>
    <string name="cancel_button_label">Cancel</string>
    
    <string name="connection_error_notification_title">Listen connection error</string>
    
    <plurals name="new_voicemail_ticker">
    	<item quantity="one">New voicemail</item>
    	<item quantity="other">New voicemails</item>
    </plurals>

    <plurals name="new_listen_voicemail">
    	<item quantity="one">New Listen Voicemail</item>
    	<item quantity="other">New Listen Voicemails</item>
    </plurals>

    <plurals name="count_listen_voicemail">
    	<item quantity="one">%1$d new Listen Voicemail</item>
    	<item quantity="other">%1$d new Listen Voicemails</item>
    </plurals>

	<string name="generic_confirm">OK</string>
	<string name="generic_cancel">Cancel</string>

	<string name="voicemail_display_name">voicemail-%1$s.%2$s</string>
	<string name="voicemail_title">Voicemail from %3$s on %1$s (%2$s)</string>
	<string name="voicemail_email_body">\nReceived: %1$s\nFrom: %2$s (%3$s)\nDuration: %4$s\n\nTranscription:\n%5$s\n\n</string>
	<string name="voicemail_email_body_no_transcription">\nReceived: %1$s\nFrom: %2$s (%3$s)\nDuration: %4$s\nNo transcription available.\n\n</string>
	
	<string name="contact_profile_action">Listen profile</string>
    <string name="contact_view_profile">View profile</string>

	<string name="liveFolder_listenContacts">Listen Phonebook</string>	
	<string name="contact_view_activity">Listen Contact</string>
	<string name="no_contact_details">No additional information for this contact</string>
	<string name="hideContactTitle">Hide</string>
	<string name="hideContactMessage">Hide Listen information for this contact.</string>
	<string name="invalidContactToast">Listen contact not found.</string>
	<string name="noContactActionToast">No action found.</string>
	<string name="menu_delete_contact">Delete</string>
	<string name="contactOptionsTitle">Options</string>
	<string name="phoneContactHeader">Call %1$s</string>
	<string name="emailContactHeader">Email %1$s</string>
	<string name="fullContactInfo">View Contact</string>	
</resources>
