<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

<PreferenceCategory android:title="@string/pref_sync_category">

	<Preference android:title="@string/pref_sync_clear_title" android:summary="@string/pref_sync_clear_detail"
		        android:selectable="true" android:key="clear_cache_pref"/>
		        
	<Preference android:key="sync_interval_pref" android:enabled="true" android:title="@string/pref_sync_interval_title"
		android:selectable="true" android:defaultValue="5"/>

	<CheckBoxPreference android:summaryOn="@string/pref_sync_audio_on" android:summaryOff="@string/pref_sync_audio_off"
		android:key="sync_audio" android:defaultValue="true" android:title="@string/pref_sync_audio"/>

</PreferenceCategory>

</PreferenceScreen>